# spendsensei

./: .gitignore  CLAUDE.md  DASHBOARD_REDESIGN_PLAN.md  DEPLOYMENT_QUICKSTART.md  LICENSE  Makefile  PROGRESS.md  Project Description.md  RAILWAY_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_FIXES.md  RAILWAY_TOML_MIGRATION.md  README.md  SIGNAL_DETECTION_FIXES.md  STATUS.md
spendsense-backend/: .coveragerc  AI_USAGE.md  TECHNICAL_WRITEUP.md  main.py  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  railway.toml
spendsense-backend/data/: content_catalog.yaml  evaluation_report.md  evaluation_results.csv  evaluation_results.json  partner_offers_catalog.yaml  spendsense.db  spendsense.db-shm  spendsense.db-wal  users.json  users_backup.json
spendsense-backend/docs/: EPIC_3_COMPLETION_SUMMARY.md  generators_usage.md
spendsense-backend/scripts/: demo_recommendation_pipeline.py  demo_template_integration.py  evaluate.py  init_and_load_data.py  init_db_railway.py  migrate_database.py  test_account_transaction_endpoints.py  test_credit_analysis.py  test_guardrails.py  test_guardrails_blocking.py  test_income_analysis.py  test_insights_endpoint.py  test_insights_with_guardrails.py  test_persona_assignment.py  test_persona_matching.py  test_recommendation_engine.py  test_savings_analysis.py  test_schemas.py  test_signal_computation.py  test_subscription_detection.py  test_template_generator.py  test_user_endpoints.py
spendsense-backend/tests/: README_TESTING.md  __init__.py  conftest.py  test_api_accounts.py  test_api_insights.py  test_api_users.py  (+9 more)
(+164 files in other folders)
