[project]
name = "spendsense-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "faker>=37.12.0",
    "fastapi[standard]>=0.121.0",
    "pydantic>=2.12.3",
    "ruff>=0.14.3",
    "sqlalchemy>=2.0.44",
]
