[project]
name = "spendsense-backend"
version = "0.1.0"
description = "Financial behavior analysis platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "faker>=37.12.0",
    "fastapi[standard]>=0.121.0",
    "greenlet>=3.2.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.3",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spendsense"]
